--- a/index.html
+++ b/index.html
@@ -309,8 +309,15 @@
         <span id="o3-val"></span><span id="CAPE"></span>
         <span id="in-mass">80</span><span id="in-cx">0.4</span>
     </div>
+         
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
+<script src="vendor/three.min.js"></script>
+<script src="vendor/turf.min.js"></script>
+<script src="vendor/leaflet.js"></script>    
 
-    <script src="gnss-dashboard-full.js"></script>
-
+<script src="lib/ephem.js"></script>
+<script src="lib/astro.js"></script>    
+    
+<script src="gnss-dashboard-full.js"></script>                  
 </body>
-    </html>
+</html> 
