--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@ footer#sub-dashboard-row {
     </div>
          
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
-<script src="vendor/three.min.js"></script>
-<script src="vendor/turf.min.js"></script>
-<script src="vendor/leaflet.js"></script>    
 
 <script src="lib/ephem.js"></script>
-<script src="lib/astro.js"></script>    
+<script src="api/weather.js"></script>
+
+<script src="lib/astro.js"></script>
+
     
 <script src="gnss-dashboard-full.js"></script>                  
 </body>
