--- a/index.html
+++ b/index.html
@@ -151,17 +151,25 @@
 </footer>
 
 <div id="scientific-hidden-buffer" style="display:none;">
-    <span id="ui-f-arch"></span><span id="ui-f-roll"></span>
-    <span id="in-mass"></span><span id="in-cx"></span>
-    <span id="distance-light-s"></span><span id="distance-light-h"></span>
-    <span id="time-dilation-vitesse"></span><span id="time-dilation-gravite"></span>
-    <span id="vitesse-raw"></span><span id="speed-stable-ms"></span>
-    <span id="mach-number"></span><span id="vertical-speed"></span>
-    <span id="force-g-vert"></span><span id="moon-distance"></span>
-    <span id="dew-point"></span><span id="ui-lorentz-2"></span>
+    <span id="ast-jd"></span>
+    <span id="last-sync-gmt"></span>
+    <span id="ui-sextant-status"></span>
+    <span id="moon-distance"></span>
+
     <span id="ukf-q-w"></span><span id="ukf-q-x"></span><span id="ukf-q-y"></span><span id="ukf-q-z"></span>
     <span id="bias-acc-z"></span><span id="bias-gyro-z"></span>
-    <span id="last-sync-gmt"></span>
+    
+    <span id="ui-lorentz-2"></span>
+    <span id="time-dilation-vitesse"></span>
+    <span id="time-dilation-gravite"></span>
+    <span id="distance-light-s"></span>
+    
+    <span id="in-mass">0.05</span> <span id="in-cx">0.47</span>   <span id="ui-f-roll"></span>
+    <span id="mach-number"></span>
+    <span id="vitesse-raw"></span>
+    <span id="force-g-vert"></span>
+    <span id="dynamic-press"></span>
+    <span id="reynolds-number"></span>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 
