--- a/index.html
+++ b/index.html
@@ -292,6 +292,54 @@ const OMNI_CORE = {
         l.innerHTML = `<div>> ${msg}</div>` + l.innerHTML; 
     }
 };
+    /**
+ * CORRECTIF DE NAVIGATION 6-DOF (RÉFÉRENTIEL TERRESTRE)
+ * Calcule la vitesse corrigée de l'inclinaison (Pitch/Roll)
+ */
+
+process6DOF(dt) {
+    // 1. Conversion des angles en Radians
+    const pitch = (this.state.rot.b || 0) * (Math.PI / 180); // Tangage
+    const roll  = (this.state.rot.g || 0) * (Math.PI / 180); // Roulis
+    const yaw   = (this.state.rot.a || 0) * (Math.PI / 180); // Lacet
+
+    // 2. Accélérations brutes lues par le capteur [HW]
+    let rawX = this.raw_acc.x || 0;
+    let rawY = this.raw_acc.y || 0;
+    let rawZ = this.raw_acc.z || 0;
+
+    // 3. MATRICE DE ROTATION INVERSE (Extracteur de Gravité)
+    // On calcule la composante de la gravité sur chaque axe selon l'inclinaison
+    const gravityX = -Math.sin(roll) * Math.cos(pitch) * this.PHYS.G;
+    const gravityY =  Math.sin(pitch) * this.PHYS.G;
+    const gravityZ =  Math.cos(pitch) * Math.cos(roll) * this.PHYS.G;
+
+    // 4. ACCÉLÉRATION LINÉAIRE RÉELLE (Libérée de la pesanteur)
+    // C'est ici que la magie opère : même incliné, ax_pure tend vers 0 au repos.
+    let ax_pure = rawX - gravityX;
+    let ay_pure = rawY - gravityY;
+    let az_pure = rawZ - gravityZ - this.state.bias.z;
+
+    // 5. PROJECTION DANS LE PLAN HORIZONTAL (Vitesse Monde)
+    // On compense le fait que le téléphone est penché pour obtenir la poussée "vers l'avant"
+    // Accélération horizontale vraie = (ax * cos(pitch)) + (az * sin(pitch))
+    let acc_horizontale = (ax_pure * Math.cos(pitch)) + (az_pure * Math.sin(pitch));
+
+    // 6. FILTRE DE STASE (Noise Gate)
+    const noise_floor = 0.18; 
+    if (Math.abs(acc_horizontale) < noise_floor) {
+        // ZUPT : Zero Velocity Update (Amortissement pour éviter la dérive à l'arrêt)
+        this.state.vel.x = m.multiply(this.state.vel.x, 0.95);
+    } else {
+        // Intégration Newtonienne sur la vitesse corrigée
+        const dv = m.multiply(_BN(acc_horizontale), _BN(dt));
+        this.state.vel.x = m.add(this.state.vel.x, dv);
+    }
+
+    // 7. MISE À JOUR DE LA DISTANCE
+    const v_inst = Number(this.state.vel.x);
+    this.state.dist = m.add(this.state.dist, m.multiply(_BN(Math.abs(v_inst)), _BN(dt)));
+                     }
 
 // INITIALISATION AU CLIC
 document.getElementById('main-init-btn').onclick = () => OMNI_CORE.boot();
