--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/10.4.3/decimal.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/astronomy-engine@2.1.19/astronomy.browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
           
 <style> 
@@ -286,6 +285,7 @@ input, select { background: #000; border: 1px solid var(--border); color: #fff; 
         </div>
     </div>
 
+    <script src="lib/ephem.js"></script>
     <script src="gnss-dashboard-full.js"></script>
 
 </body>
